<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".practicafinal.LoginActivity">


    <ImageView
        android:id="@+id/ivLogo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_logo_app"
        android:layout_width="200dp"
        android:layout_height="200dp"/>

    <TextView
        android:id="@+id/tvLogin"
        android:text="@string/login_title"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="42sp"
        android:textStyle="bold"
        android:textColor="@color/orange_app"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etNameLogin"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etEmailLogin"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/etNameLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/etEmailConfirmLogin"
        android:hint="@string/confirm_email_hint"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/etEmailLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    
    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login_button"
        android:backgroundTint="@color/gray_app"
        app:layout_constraintTop_toBottomOf="@+id/etEmailConfirmLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="45dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>